--- a/index.html
+++ b/index.html
@@ -3,50 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Triange of Life</title>
+    <title>Triangle of Life</title>
     <link rel="stylesheet" href="background.css" type="text/css">
 </head>
+
 <body>
     <header>
-        <button id="logo-kunwari" class="kunwari-button">Image or logo</button>
-        <ul>
-            <li><a href="#about">About</li>
-            <li><a href="#packages">Packages</li>
-            <li><a href="#gallery">Gallery</li>
-            <li><a href="#login">Login</li>
-        </ul>
+        <div class="header-content">
+            <button id="logo-kunwari" class="kunwari-button"></button>
+            <ul class="nav-folder">
+                <li><a href="#about">About</a></li>
+                <li><a href="#packages">Packages</a></li>
+                <li><a href="#gallery">Gallery</a></li>
+                <li><a href="#login">Login</a></li>
+            </ul>
+        </div>
     </header>
-    <section id="about">
-        <div>
-            <p style="font-family: Impact; font-size: 32px; color: black; margin: 0;">Del Rosario, Joshua Erris A.</p>
-            <p style="font-family: Impact; font-size: 32px; color: black; margin: 0;">Cordova, Claudine A.</p>
-        </div>
+
+        
+    <section id="about" class="content">
+        <p style="font-family: Impact; font-size: 32px;">Del Rosario, Joshua Erris A.</p>
+        <p style="font-family: Impact; font-size: 32px;">Cordova, Claudine A.</p>
     </section>
 
-    <section id="packages">
-        <div>
-            <p style="font-family: Impact; font-size: 32px; color: black; margin: 0;">Package 1</p>
-            <p style="font-family: Impact; font-size: 32px; color: black; margin: 0;">Package 2</p>
-        </div>
+    <section id="packages" class="content">
+        <p style="font-family: Impact; font-size: 32px;">Package 1</p>
+        <p style="font-family: Impact; font-size: 32px;">Package 2</p>
     </section>
 
-    <section id="gallery">
-        <div>
-            <p style="font-family: Impact; font-size: 32px; color: black; text-align: center;">Gallery</p>
-            <img src="https://media.newyorker.com/photos/59095bb86552fa0be682d9d0/master/pass/Monkey-Selfie.jpg" width="450" height="450">
-            <img src="https://images.unsplash.com/photo-1540573133985-87b6da6d54a9?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bW9ua2V5c3xlbnwwfHwwfHx8MA%3D%3D" width="450" height="450">
-            <img src="https://static.wikia.nocookie.net/ben10/images/8/84/Spidermonkey_UAF.png/revision/latest?cb=20210320001700" width="450" height="450">
-        </div>
+    <section id="gallery" class="content gallery">
+        <p style="font-family: Impact; font-size: 32px;">Gallery</p>
+        <img src="https://media.newyorker.com/photos/59095bb86552fa0be682d9d0/master/pass/Monkey-Selfie.jpg" width="300" height="300">
+        <img src="https://images.unsplash.com/photo-1540573133985-87b6da6d54a9?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bW9ua2V5c3xlbnwwfHwwfHx8MA%3D%3D" width="300" height="300">
+        <img src="https://static.wikia.nocookie.net/ben10/images/8/84/Spidermonkey_UAF.png/revision/latest?cb=20210320001700" width="300" height="300">
     </section>
 
-    <section id="login">
-        <div>
-            <p style="font-family: Impact; font-size: 32px; color: black; margin: 0;">Please Log In or Sign Up</p>
-        </div>
+    <section id="login" class="content">
+        <p style="font-family: Impact; font-size: 32px;">Please Log In or Sign Up</p>
     </section>
-</body>
+
 <footer>
 </footer>
-    <script src="commands.js"></script>
+
+<script src="commands.js"></script>
+
 </body>
 </html>
