--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
                 <li><a href="#packages">Packages</a></li>
                 <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#login">Login</a></li>
+            <button id="login" class="kunwari-login"></button>
             </ul>
         </div>
     </header>
 
         
     <section id="about" class="content">
-        <p style="font-family: Impact; font-size: 32px;">Del Rosario, Joshua Erris A.</p>
+        <p style="font-family: Brush Script MT, cursive; font-size: 32px;">Del Rosario, Joshua Erris A.</p>
         <p style="font-family: Impact; font-size: 32px;">Cordova, Claudine A.</p>
     </section>
 
@@ -40,8 +41,11 @@
 
     <section id="login" class="content">
         <p style="font-family: Impact; font-size: 32px;">Please Log In or Sign Up</p>
+        <input type="text" value="Username">
+        <input type="text" value="Password">
+        <!-- add to cart, login shit -->
     </section>
-
+    
 <footer>
 </footer>
 
